ISSUE #1186 - Fix overflow on dashboard view

--- a/frontend/components/home/css/home.css
+++ b/frontend/components/home/css/home.css
@@ -23,10 +23,6 @@ home {
 	overflow: hidden;
 }
 
-home [ui-view] {
-	/* position: relative; */
-}
-
 home .homeContainer {
 	height: 100%;
 	overflow: hidden;
